...
    final userId = _supabase.auth.currentUser?.id;

    return Scaffold(
      backgroundColor: const Color(0xFFFDFDFD),
      appBar: AppBar(
        title: const Text(
          "THE ARTHECA",
          style: TextStyle(
              fontFamily: 'Serif',
              letterSpacing: 4,
              fontSize: 14,
              fontWeight: FontWeight.bold
          ),
...
